@@ -1,3 +1,8 @@
+2003-11-07  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/hal_aux.c (_rattler_leds): New function.  Also set up I/O bits
+	properly to support LEDs.
+
 2003-10-22  Gary Thomas  <gary@mlbassoc.com>
 
 	* cdl/hal_powerpc_rattler.cdl: Add CDL to identify board model.
